@@ -41,7 +41,7 @@ Create a root object and try again:
 >>> fsdump(path) #doctest: +ELLIPSIS
 Trans #00000 tid=... time=... offset=52
     status=' ' user='' description='initial database creation'
-  data #00000 oid=0000000000000000 size=66 class=persistent.mapping.PersistentMapping
+  data #00000 oid=0000000000000000 size=60 class=persistent.mapping.PersistentMapping
 
 Now we see first transaction with root object.
 
@@ -54,10 +54,10 @@ Let's add a BTree:
 >>> fsdump(path) #doctest: +ELLIPSIS
 Trans #00000 tid=... time=... offset=52
     status=' ' user='' description='initial database creation'
-  data #00000 oid=0000000000000000 size=66 class=persistent.mapping.PersistentMapping
-Trans #00001 tid=... time=... offset=207
+  data #00000 oid=0000000000000000 size=60 class=persistent.mapping.PersistentMapping
+Trans #00001 tid=... time=... offset=201
     status=' ' user='' description='added an OOBTree'
-  data #00000 oid=0000000000000000 size=113 class=persistent.mapping.PersistentMapping
+  data #00000 oid=0000000000000000 size=107 class=persistent.mapping.PersistentMapping
   data #00001 oid=0000000000000001 size=29 class=BTrees.OOBTree.OOBTree
 
 Now we see two transactions and two changed objects.
