@@ -17,9 +17,20 @@
 $Id$"""
 
 import persistent
-from UserDict import UserDict
+import UserDict
 
-class PersistentMapping(UserDict, persistent.Persistent):
+class default(object):
+
+    def __init__(self, func):
+        self.func = func
+
+    def __get__(self, inst, class_):
+        if inst is None:
+            return self
+        return self.func(inst)
+
+
+class PersistentMapping(UserDict.IterableUserDict, persistent.Persistent):
     """A persistent wrapper for mapping objects.
 
     This class allows wrapping of mapping objects so that object
@@ -36,13 +47,13 @@ class PersistentMapping(UserDict, persistent.Persistent):
     # state as changed when a method actually changes the state.  At
     # the mapping API evolves, we may need to add more methods here.
 
-    __super_delitem = UserDict.__delitem__
-    __super_setitem = UserDict.__setitem__
-    __super_clear = UserDict.clear
-    __super_update = UserDict.update
-    __super_setdefault = UserDict.setdefault
-    __super_pop = UserDict.pop
-    __super_popitem = UserDict.popitem
+    __super_delitem = UserDict.IterableUserDict.__delitem__
+    __super_setitem = UserDict.IterableUserDict.__setitem__
+    __super_clear = UserDict.IterableUserDict.clear
+    __super_update = UserDict.IterableUserDict.update
+    __super_setdefault = UserDict.IterableUserDict.setdefault
+    __super_pop = UserDict.IterableUserDict.pop
+    __super_popitem = UserDict.IterableUserDict.popitem
 
     def __delitem__(self, key):
         self.__super_delitem(key)
@@ -76,38 +87,16 @@ class PersistentMapping(UserDict, persistent.Persistent):
         self._p_changed = 1
         return self.__super_popitem()
 
-    # __iter__ was added in ZODB 3.4.2, but should have been added long
-    # before.  We could inherit from Python's IterableUserDict instead
-    # (which just adds __iter__ to Python's UserDict), but that class isn't
-    # documented, and it would add another level of lookup for all the
-    # other methods.
-    def __iter__(self):
-        return iter(self.data)
+    # Old implementations used _container rather than data.
+    # Use a descriptor to provide data when we have _container instead
 
-    # If the internal representation of PersistentMapping changes,
-    # it causes compatibility problems for pickles generated by
-    # different versions of the code.  Compatibility works in both
-    # directions, because an application may want to share a database
-    # between applications using different versions of the code.
+    @default
+    def data(self):
+        # We don't want to cause a write on read, so wer're careful not to
+        # do anything that would cause us to become marked as changed, however,
+        # if we're modified, then the saved record will have data, not
+        # _container.
+        data = self.__dict__.pop('_container')
+        self.__dict__['data'] = data
 
-    # Effectively, the original rep is part of the "API."  To provide
-    # full compatibility, the getstate and setstate must read and
-    # write objects using the old rep.
-
-    # As a result, the PersistentMapping must save and restore the
-    # actual internal dictionary using the name _container.
-
-    def __getstate__(self):
-        state = dict([x for x in self.__dict__.items()
-                        if not x[0].startswith('_v_')])
-        state['_container'] = state['data']
-        del state['data']
-        return state
-
-    def __setstate__(self, state):
-        if state.has_key('_container'):
-            self.data = state['_container']
-            del state['_container']
-        elif not state.has_key('data'):
-            self.data = {}
-        self.__dict__.update(state)
+        return data
